--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -5,7 +5,7 @@
 
     <!-- Logo -->
     <a th:href="@{/index}" class="nav-link">
-      <img src="logo.png" alt="Sistema Akaroa Logo" class="mb-4" />
+      <img src="https://i.pinimg.com/564x/30/63/8c/30638cb914dfcb962e607e9c6455b5d2.jpg" alt="Sistema Akaroa Logo" class="mb-4" />
     </a>
 
     <!-- Header con título dinámico -->
@@ -32,7 +32,7 @@
         <i class="bi bi-truck"></i> Gestión de Proveedores
       </a>
 
-      <header>
+      <!--<header>
         <hr>
         <h4>Ventas</h4>
       </header>
@@ -43,7 +43,7 @@
       <a th:href="@{/reportes}" class="nav-link">
         <i class="bi bi-bar-chart"></i> Reportes
       </a>
-
+-->
       <header>
         <hr>
         <h4>Usuarios</h4>
