--- a/src/main/resources/templates/lotes.html
+++ b/src/main/resources/templates/lotes.html
@@ -84,8 +84,6 @@
                             <span>Eliminar</span>
                             <i class="bi bi-trash-fill"></i>
                         </div>
-
-
                     </div>
 
                 </div>
@@ -200,7 +198,9 @@
         });
         });
     </script>
+    <script>
 
+    </script>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
